# Vuln-Analysis-NN

./: README.md  pyproject.toml
config/: config.py  model-configuration.yaml
data/processed/: brick-boilerplate-deduplication.csv  brick-boilerplate.csv
data/raw/brick-boilerplate_0-52/: 0.json  schema.json
data/sample/: _sample.csv
src/data_preprocessing/: data_convertion.py  json_sturcture_analyze.py
src/models/: neuralnetwork2_gridsearch.py  predictiction.py
src/traning/: neuralnetwork1.py  neuralnetwork2_gridsearch.py
